# cppcheck

./: .travis.yml  Makefile  meson.build  readme.md  regex
.travis/: check_addons.sh
cli/: cmdlineparser.cpp  cppcheckexecutor.cpp  filelister.h  threadexecutor.cpp
gui/: gui.pro
htmlreport/: cppcheck-htmlreport  test_htmlreport.py
htmlreport/tests/: 0.html  A.c  A_include  out.xml  utf8-invalid.c
lib/: analyzerinfo.cpp  astutils.cpp  check64bit.cpp  checkassert.cpp  checkautovariables.cpp  checkbool.cpp  checkboost.cpp  checkbufferoverrun.cpp  checkclass.cpp  checkcondition.cpp  checkexceptionsafety.cpp  checkio.cpp  checkleakautovar.cpp  checkmemoryleak.cpp  checknullpointer.cpp  checkother.cpp  checkother.h  checksizeof.cpp  checkstl.cpp  checkstring.cpp  checktype.cpp  checkuninitvar.cpp  checkunusedfunctions.cpp  cppcheck.h  errorlogger.cpp  executionpath.cpp  library.cpp  matchcompiler.h  path.h  preprocessor.cpp  symboldatabase.cpp  symboldatabase.h  templatesimplifier.cpp  token.cpp  token.h  tokenize.cpp  tokenize.h  tokenlist.cpp  valueflow.cpp
test/: testboost.cpp  testcmdlineparser.cpp  testcondition.cpp  testother.cpp  testpreprocessor.cpp  testsimplifytemplate.cpp  testsimplifytokens.cpp  teststl.cpp  teststring.cpp  testsuite.cpp  testsymboldatabase.cpp  testthreadexecutor.cpp
tools/: dmake.cpp  matchcompiler.py
